	all : fixed typing chains of calls with constrained type params (#10198)
	hl : fixed debugging of `catch` blocks (#10109)
	jvm : fixed manifest generation for cases with a lot of jar libraries (#10157)
	js : fixed extending extern classes for es5 (#10192)
	js : fixed checking `this` before `super` for es6 (#10193)
	eval : fixed null pointer exception in `eval.NativeString.fromString(null)`

2021-02-26 4.2.1:

	General improvements:

	threads : changed main thread initialization to make main event loop available during static initialization (#10114)
	php : added extern for `number_format` function (#10115)
	python : rewrote `sys.thread.Thread`, `Mutex` and `Lock` as classes instead of abstracts.

	Bugfixes:

	all : fixed compiler compatibility with OS X 10.13 (#10110)
	all : fixed compiler hanging on `switch` for abstracts with implicit casts involving type parameters and constraints (#10082)
	all : fixed inlining of `haxe.DynamicAccess.keyValueIterator` (#10118)
	all : fixed rest arguments typing against type parameters (#10124)
	analyzer : fixed side effect handling for enums (#10032)
	cpp : fixed handling of `cpp.ConstCharStar` with analyzer enabled (#9733)
	php : fixed failure with trailing slash in output dir (#6212)
	hl : fixed call stack of rethrown exceptions (#10109)

2021-02-09 4.2.0:

	New features:

	all : implemented "classic" abstract classes and functions (see [haxe-evolution#69](https://github.com/HaxeFoundation/haxe-evolution/pull/69)) (#9716)
	all : module-level static declarations (#8460)
	all : implemented rest arguments (variadic functions) for all targets with `haxe.Rest` type (#9961)
	all : per-thread event loops `sys.thread.Thread.events` (#9868)
	all : added `@:inheritDoc` meta to inherit documentation for a type or field from another type or field (#9817)
	all : support method overloading for extern methods on all targets (#9793)
	all : constructors forwarding for abstracts with `@:forward.new` (#9735)